fixed images not showing up

--- a/Codes/productListStyle.css
+++ b/Codes/productListStyle.css
@@ -161,6 +161,11 @@
   text-align: center;
   background-color: powderblue;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: 0.2s ease-in-out;
+}
+.product-card:hover {
+  transform: scale(1.1);
+  transition: 0.2s ease-in-out;
 }
 
 .product-card img {
